(library
 (name es2015)
 (public_name es2015)
 (libraries js_of_ocaml ojs es5)
 (flags
  (:standard
   -w
   ; Hide "no cmx file was found in path for module Ojs, and its interface was not compiled with -opaque"
   -58)))

(rule
 (targets es2015.ml)
 (deps lib/es2015.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o {%targets})))

(rule
 (targets es2015_collection.ml)
 (deps lib/es2015_collection.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o {%targets})))

(rule
 (targets es2015_core.ml)
 (deps lib/es2015_core.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o {%targets})))

(rule
 (targets es2015_generator.ml)
 (deps lib/es2015_generator.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o {%targets})))

(rule
 (targets es2015_iterable.ml)
 (deps lib/es2015_iterable.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o {%targets})))

(rule
 (targets es2015_promise.ml)
 (deps lib/es2015_promise.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o {%targets})))

(rule
 (targets es2015_proxy.ml)
 (deps lib/es2015_proxy.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o {%targets})))

(rule
 (targets es2015_reflect.ml)
 (deps lib/es2015_reflect.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o {%targets})))

(rule
 (targets es2015_symbol.ml)
 (deps lib/es2015_symbol.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o {%targets})))
