(library
 (name es2016)
 (public_name es2016)
 (libraries js_of_ocaml ojs es2015)
 (flags
  (:standard
   -w
   ; Hide "no cmx file was found in path for module Ojs, and its interface was not compiled with -opaque"
   -58)))

(rule
 (target es2016.ml)
 (deps gen/es2016.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))

(rule
 (target es2016_array_include.ml)
 (deps gen/es2016_array_include.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))
