(library
 (name es2018)
 (public_name es2018)
 (libraries js_of_ocaml ojs es2017)
 (flags
  (:standard
   -w
   ; Hide "no cmx file was found in path for module Ojs, and its interface was not compiled with -opaque"
   -58)))

(rule
 (target es2018_asyncgenerator.ml)
 (deps gen/es2018_asyncgenerator.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))

(rule
 (target es2018_asynciterable.ml)
 (deps gen/es2018_asynciterable.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))

(rule
 (target es2018.ml)
 (deps gen/es2018.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))

(rule
 (target es2018_intl.ml)
 (deps gen/es2018_intl.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))
