(library
 (name es2020)
 (public_name es2020)
 (libraries js_of_ocaml ojs es2019)
 (flags
  (:standard
   ; 58: Hide "no cmx file was found in path for module Ojs, and its interface was not compiled with -opaque"
   ; 60: We hide some anonymous interfaces
   -w
   -58-60)))

(rule
 (target es2020_bigint.ml)
 (deps gen/es2020_bigint.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))

(rule
 (target es2020.ml)
 (deps gen/es2020.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))

(rule
 (target es2020_intl.ml)
 (deps gen/es2020_intl.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))

(rule
 (target es2020_promise.ml)
 (deps gen/es2020_promise.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))

(rule
 (target es2020_sharedmemory.ml)
 (deps gen/es2020_sharedmemory.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))

(rule
 (target es2020_string.ml)
 (deps gen/es2020_string.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))

(rule
 (target es2020_symbol_wellknown.ml)
 (deps gen/es2020_symbol_wellknown.ml)
 (mode promote)
 (action
  (copy %{deps} %{target})))
