(library
 (name node)
 (public_name node)
 (libraries js_of_ocaml ojs es2020)
 (modes byte)
 (js_of_ocaml
  (javascript_files node_stub.js))
 (flags
  (:standard
   ; 16: Hide "[unerasable-optional-argument]): this optional argument cannot be erased."
   -w
   -16)))

(rule
 (targets node.ml)
 (deps intf/node.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_assert.ml)
 (deps intf/node_assert.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_async_hooks.ml)
 (deps intf/node_async_hooks.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_buffer.ml)
 (deps intf/node_buffer.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_child_process.ml)
 (deps intf/node_child_process.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_cluster.ml)
 (deps intf/node_cluster.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_console.ml)
 (deps intf/node_console.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_constants.ml)
 (deps intf/node_constants.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_crypto.ml)
 (deps intf/node_crypto.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_dgram.ml)
 (deps intf/node_dgram.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_dns.ml)
 (deps intf/node_dns.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_domain.ml)
 (deps intf/node_domain.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_events.ml)
 (deps intf/node_events.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_fs.ml)
 (deps intf/node_fs.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_fs_promises.ml)
 (deps intf/node_fs_promises.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_globals.ml)
 (deps intf/node_globals.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_http.ml)
 (deps intf/node_http.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_http2.ml)
 (deps intf/node_http2.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_https.ml)
 (deps intf/node_https.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_import.ml)
 (deps intf/node_import.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_inspector.ml)
 (deps intf/node_inspector.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_module.ml)
 (deps intf/node_module.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_net.ml)
 (deps intf/node_net.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_os.ml)
 (deps intf/node_os.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_path.ml)
 (deps intf/node_path.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_perf_hooks.ml)
 (deps intf/node_perf_hooks.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_process.ml)
 (deps intf/node_process.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_punycode.ml)
 (deps intf/node_punycode.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_querystring.ml)
 (deps intf/node_querystring.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_readline.ml)
 (deps intf/node_readline.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_repl.ml)
 (deps intf/node_repl.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_stream.ml)
 (deps intf/node_stream.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_string_decoder.ml)
 (deps intf/node_string_decoder.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_timers.ml)
 (deps intf/node_timers.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_tls.ml)
 (deps intf/node_tls.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_trace_events.ml)
 (deps intf/node_trace_events.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_tty.ml)
 (deps intf/node_tty.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_url.ml)
 (deps intf/node_url.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_util.ml)
 (deps intf/node_util.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_v8.ml)
 (deps intf/node_v8.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_vm.ml)
 (deps intf/node_vm.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_wasi.ml)
 (deps intf/node_wasi.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_worker_threads.ml)
 (deps intf/node_worker_threads.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets node_zlib.ml)
 (deps intf/node_zlib.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))
